...
    modifier: Modifier = Modifier
) {
    Card(
        onClick = onClick,
        modifier = modifier
            .aspectRatio(MovieCardDefaults.ASPECT_RATIO)
            .semantics { testTag = "movie_card" },
        shape = RoundedCornerShape(MovieCardDefaults.CORNER_RADIUS),
        elevation = CardDefaults.cardElevation(defaultElevation = MovieCardDefaults.ELEVATION)
    ) {
        Box(modifier = Modifier.fillMaxSize()) {

            MoviePosterImage(
...
